@@ -1,5 +1,9 @@
 2021-10-30 Danilo Chang
 
+	* Implement command: setWindowTitle
+
+2021-10-30 Danilo Chang
+
 	* Apply Christian's patch
 
 2021-10-28 Danilo Chang
